# hyperdjango

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-website.yml
docs/: actions.md  alpine-integration.md  client-side-actions.md  config-reference.md  cookbook.md  declarative-html-apis.md  events.md  faq.md  forms.md  index.md  installation.md  layouts.md  pages-and-actions.md  pages-and-rendering.md  production-checklist.md  requirements.txt  routing.md  runtime-reference.md  signals.md  troubleshooting.md
docs/_build/html/: .buildinfo  config-reference.html  cookbook.html  events.html  forms.html  genindex.html  index.html  installation.html  objects.inv  pages-and-actions.html  production-checklist.html  routing.html  runtime-reference.html  search.html  searchindex.js  signals.html  troubleshooting.html
docs/_build/html/.doctrees/: config-reference.doctree  cookbook.doctree  environment.pickle  events.doctree  forms.doctree  index.doctree  installation.doctree  pages-and-actions.doctree  production-checklist.doctree  routing.doctree  runtime-reference.doctree  signals.doctree  troubleshooting.doctree
docs/_build/html/.doctrees/examples/: example-app.doctree  index.doctree
docs/_build/html/_sources/: config-reference.md.txt  events.md.txt  index.md.txt  installation.md.txt  pages-and-actions.md.txt
docs/_build/html/examples/: example-app.html  index.html
docs/_build/html/guides/: index.html  navigation-patterns.html  oob-workflow.html  request-lifecycle.html  transitions.html
docs/_build/html/reference/: action-response.html  forms-attributes.html  index.html  loading.html  navigation.html  swap-and-sync.html
docs/examples/: example-app.md  index.md
docs/guides/: custom-base-template.md  index.md  migration-0.2-to-0.3.md  migration-0.3-to-0.4.md  multi-patch-workflow.md  oob-workflow.md  request-lifecycle.md  template-packages.md  transitions.md  vite-production-build.md
docs/reference/: action-response.md  actions.md  django-integration.md  forms-attributes.md  html-apis.md  index.md  navigation.md  page-api.md  pages-and-rendering.md  sse-payloads.md  swap-and-sync.md
example/: README.md  package-lock.json  package.json  vite.config.js
example/config/: settings.py  urls.py
example/hyper/: template_views.py
example/hyper/layouts/base/: __init__.py  entry.ts  index.html
example/hyper/layouts/dashboard/: __init__.py  index.html
example/hyper/routes/about/: +page.py  index.html  page.py
example/hyper/routes/async-handlers/: +page.py  index.html
example/hyper/routes/error-demo/: +page.py  index.html
example/hyper/routes/index/: +page.py  index.html  page.py
example/hyper/routes/modal-demo/: +page.py  index.html
example/hyper/routes/plain-django-view/: index.html  page.py
example/hyper/routes/profile/: +page.py  index.html  page.py
example/hyper/routes/search/: +page.py  index.html  page.py
example/hyper/routes/signals/: +page.py  index.html  page.py
example/hyper/routes/sse-demo/: +page.py  index.html
example/hyper/routes/todos/: +page.py  index.html  page.py
example/hyper/routes/upload-progress/: +page.py  index.html
example/hyper/templates/profile_card/: index.html  page.py
hyperdjango/: __init__.py  actions.py  apps.py  conf.py  page.py  shortcuts.py
hyperdjango/integrations/alpine/: actions.py
hyperdjango/management/commands/: hyper_scaffold.py
hyperdjango/routing/: compiler.py  graph.py  loader.py  parser.py  scanner.py  urls.py
hyperdjango/runtime/: __init__.py  dispatcher.py  requests.py  responses.py
hyperdjango/static/hyperdjango/: hyper.js
hyperdjango/templates/hyperdjango/: base.html
hyperdjango/templatetags/: hyper_tags.py
tests/: test_actions.py  test_apps.py  test_page_api.py  test_parser.py  test_route_conflicts.py  test_scaffold.py
website/: .impeccable.md  Dockerfile  package-lock.json  package.json  pyproject.toml  tailwind.config.cjs  vite.config.js
website/config/: asgi.py  settings.py  urls.py  views.py
website/docs_content/docs/: assets-and-vite.md  base-template.md  conf.py  index.md  installation.md  production-checklist.md
website/docs_content/docs/reference/: asset-resolver.md  client-runtime.md  commands.md  exceptions.md  settings.md  template-tags.md
website/hyper/: 404.html  500.html
website/hyper/layouts/base/: __init__.py  entry.head.ts  entry.ts  index.html
website/hyper/layouts/base/partials/: topnav.html
website/hyper/layouts/docs/: __init__.py  index.html  styles.css
website/hyper/routes/docs/: +page.py  index.html
website/hyper/routes/docs/[...slug]/: +page.py  index.html
website/hyper/routes/index/: +page.py  entry.ts  index.html  styles.css
website/hyper/routes/index/js/: hero-animation.js
website/hyper/routes/index/partials/: agent_assistant_shell.html  agent_log_chunk.html  agent_log_empty.html  agent_log_item.html  agent_log_shell.html  agent_log_shell_done.html  agent_response_chunk.html  agent_user_message.html  examples.html  examples_agent.html  examples_inline.html  examples_search.html  examples_signals.html  examples_todo.html  examples_upload.html  features.html  footer.html  hero.html  inline_editor.html  search_results.html  todo_empty.html  todo_item.html  todo_list.html  todo_stats.html  upload_result.html  why.html
website/hyper/shared/: docs_content.py  github.py  main.css  seo.py
website/hyper/templates/errors/: __init__.py  index.html
website/hyperdjango_lib/hyperdjango/: page.py  shortcuts.py
website/hyperdjango_lib/hyperdjango/assets/: __init__.py  manifest.py  resolver.py
website/hyperdjango_lib/hyperdjango/integrations/: __init__.py
website/hyperdjango_lib/hyperdjango/integrations/alpine/: __init__.py
website/hyperdjango_lib/hyperdjango/management/commands/: hyper_routes.py
website/hyperdjango_lib/hyperdjango/routing/: __init__.py  graph.py  loader.py  scanner.py
website/hyperdjango_lib/hyperdjango/runtime/: dispatcher.py  responses.py
website/hyperdjango_lib/hyperdjango/static/hyperdjango/: hyper-alpine.js
website/scripts/: sync-docs.py
(+56 files in other folders)
