[project]
name = "hyperdjango"
version = "0.31.0"
description = "HyperDjango brings high-performance, hypermedia-driven interactivity to your Django templates without the JavaScript fatigue."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=4.2",
    "django-render-block>=0.10",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hyperdjango*"]

[tool.setuptools.package-data]
"hyperdjango" = [
    "py.typed",
    "templates/**/*.html",
    "static/**/*.js",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
